# weather-boy

./: .gitignore  README.md
.github/workflows/: collect.yml  train.yml
ml/: .env.example  bootstrap.py  collector.py  config.py  features.py  frost_client.py  inference.py  pyproject.toml  requirements.txt  train.py  yr_client.py
supabase/: migrate_v2.sql  schema.sql
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx  station-list.tsx
web/app/[stationId]/: decision-cards.tsx  favorite-button.tsx  forecast-chart.tsx  loading.tsx  page.tsx
web/lib/: supabase.ts
web/public/: manifest.json
