[project]
name = "weather-boy-ml"
version = "0.1.0"
description = "ML weather correction pipeline for Norwegian farmers"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "supabase>=2.0",
    "xgboost>=2.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "python-dotenv>=1.0",
]

[project.scripts]
collect = "collector:main"
train = "train:main"
infer = "inference:main"
